--- a/tests/NoticeTest.yml
+++ b/tests/NoticeTest.yml
@@ -14,6 +14,11 @@ gorriecoe\Link\Models\Link:
     Type: URL
     URL: 'https://example.org'
     OpenInNewWindow: 1
+  link4:
+    Title: link4
+    Type: URL
+    URL: 'https://withlink.example.org'
+    OpenInNewWindow: 0
 NSWDPC\Notices\Notice:
   standardnotice:
     Title: Standard Notice
@@ -36,3 +41,10 @@ NSWDPC\Notices\Notice:
     IsActive: 1
     IsDismissible: 0
     Link: null
+  withlink:
+    Title: With link
+    Description: With link Description
+    IsGlobal: 0
+    IsActive: 0
+    IsDismissible: 0
+    Link: =>gorriecoe\Link\Models\Link.link4
