--- a/_config/config.yml
+++ b/_config/config.yml
@@ -3,4 +3,4 @@ Name: nswdpc-notice-config
 ---
 Page:
   extensions:
-    - 'NSWDPC\Notices\Extensions\NoticePageExtension'
+    - 'NSWDPC\Notices\NoticePageExtension'
